--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,11 +6,13 @@ date: 2021-04-01
 
 <h1>Jakub Adamski 👐</h1>
 
-Hey, I'm a Senior Software Engineer at Company. I enjoy working with Next.js and crafting beautiful front-end experiences.
+As a Java Developer and Artificial Intelligence enthusiast, I'm currently contributing to projects at MatchTrade Technologies, where my work involves developing and maintaining software solutions for financial market.
 
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+In my master's studies, I've dived into data preprocessing for my thesis, sparking a real passion for AI. Attending international conferences has not only broadened my horizons but also intensified my belief in AI's power to revolutionize technology and research.
 
----
+Beyond technology, I am a certified horse riding coach. This role has allowed me to share my passion for equestrian sports. I also enjoy running, which I find to be a great way to clear my mind and stay fit.
+
+My freelancing experience spans diverse projects, from developing systems for publishing houses to creating management applications for horse riding schools. You can read more about it in my posts.
 
 Find me on other platforms.
 
