--- a/pages/work.mdx
+++ b/pages/work.mdx
@@ -4,26 +4,47 @@ title: work
 date: 2021-03-18
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus diam ut ultrices ornare. Nullam sit amet luctus tellus. Pellentesque congue pellentesque turpis sed sodales.
+On this page, you'll find a glimpse into my work journey, showcasing the roles I've held and how these positions have been a continuous source of learning.
 
 ---
 
 <h2 style={{marginBottom: "5px"}}>MatchTrade Technologies</h2>
-<p style={{color: "gray", margin: 0}}>Java Developer</p>
+<p style={{color: "gray", margin: 0}}>Java Developer, 2022</p>
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus diam ut ultrices ornare. Nullam sit amet luctus tellus. Pellentesque congue pellentesque turpis sed sodales. Donec auctor purus lorem, sit amet vulputate orci consectetur consectetur. Nam tristique pulvinar ipsum non laoreet. Nam sodales euismod neque.
+In my role at Match-Trade Technologies, I have been working both in the Bridge and QFX projects, focusing on developing and maintaining specialized software solutions that enable efficient and secure trading on financial markets through external exchanges. My responsibilities have spanned from enhancing the Bridge system — a platform facilitating real-time market access, order placement, and trade execution — to contributing to the QFX project, a central liquidity hub. This involvement has provided me with a deep understanding of the intricacies of market operations, trade execution, and liquidity management.
 
-Phasellus ut semper ligula, vitae tincidunt felis. Integer nunc urna, convallis in mauris quis, commodo placerat odio. Quisque ut pellentesque elit, eleifend consectetur orci. Fusce rhoncus nunc vitae orci auctor, vel auctor lacus pulvinar. Sed imperdiet pretium nisl, sit amet imperdiet orci accumsan at.
+#### Integrations
+I was responsible for the development of connector applications for integrating other liquidity providers and connecting clients to our systems via the FIX protocol. Enabling our users to get quotes and execute trades from various markets. This line of work enabled me to get valuable insight into how markets operate and how trades are executed.
+
+#### Bridge system microservices
+As a developer responsible for maintaining and improving the Bridge system I implemented two important services: the statistics microservice and the status service. The statistics microservice, provides crucial financial data like total commissions, volume, and trade trends by handling large data volumes, allowing our clients to make informed decisions. In addition, I centralized bridge status processing by refactoring existing code and developing a new status service, integral to our transition to a microservice architecture. I used RabbitMQ and Cassandra to manage extensive data from diverse sources.
+
+#### AI Research Team Involvement
+Additionally, my role expanded to include participation in the AI research team, where we periodically evaluated AI tools to advance our workforce's efficiency and innovation.
 
 ---
 
 <h2 style={{marginBottom: "5px"}}>Apzumi</h2>
-<p style={{color: "gray", margin: 0}}>Junior Java Developer</p>
+<p style={{color: "gray", margin: 0}}>Junior Java Developer, 2021 - 2022</p>
 
 I worked in the Meedy team responsible for healthcare systems. I was maintaining and developing new functionalities and microservices related to, arranging appointments with doctors, managing medical facilities and sending medical documentation to the National Health Fund.
 
-**Notifications** - One of the microservices I developed was the new notification microservice. This microservice played a key role in enabling the sending of a large number of emails and SMSes from all the services in our stack. Its effectiveness was demonstrated during the COVID-19 health survey conducted for the abcZdrowie platform, which had over 200,000 participants and required sending a high volume of emails.
+#### Notifications
+One of the microservices I developed was the new notification microservice. This microservice played a key role in enabling the sending of a large number of emails and SMSes from all the services in our stack. Its effectiveness was demonstrated during the COVID-19 health survey conducted for the abcZdrowie platform, which had over 200,000 participants and required sending a high volume of emails.
 
-**Logging** - I also implemented a microservice specialized in logging all the changes from our administration service. This microservice allowed our clients to review the changes and prevent data loss. We were able to provide an extra layer of security and transparency for our clients, ensuring that any changes made to their data were traceable and easily reviewable.
+#### Logging
+I also implemented a microservice specialized in logging all the changes from our administration service. This microservice allowed our clients to review the changes and prevent data loss. We were able to provide an extra layer of security and transparency for our clients, ensuring that any changes made to their data were traceable and easily reviewable.
 
+---
 
+<h2 style={{marginBottom: "5px"}}>Freelancing</h2>
+
+My experience in freelancing has allowed me to gain valuable knowledge in all aspects of product development, from initial discussions with clients, to implementation, testing, legal requirements, release, marketing, and ongoing maintenance. I have been involved in cross-cutting tasks that require me to manage customer contact, plan project development, and ensure successful implementation.
+
+#### Reader
+One of the projects I have been involved in is the development of a system for publishing houses. The system provides users with easy access to books online.
+
+#### Horse School
+Another project I worked on involved developing an application for managing horse riding schools. This application streamlines the management of horse riding schools, making it easier to schedule lessons, manage workers and track customer payments.
+
+More detailed description can be found in my blog post [here](/posts/aplilab).
