--- a/pages/education.mdx
+++ b/pages/education.mdx
@@ -4,29 +4,31 @@ title: education
 date: 2021-02-18
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tempus diam ut ultrices ornare. Nullam sit amet luctus tellus. Pellentesque congue pellentesque turpis sed sodales.
+This page provides an insight into my educational background, highlighting my achievements and experiences that have shaped my academic and professional journey.
 
 ---
 
 <h2 style={{marginBottom: "5px"}}>Masters degree</h2>
-<p style={{color: "gray", margin: 0}}>Adam Mickiewicz University Poznań</p>
+<p style={{color: "gray", margin: 0}}>Adam Mickiewicz University Poznań; 2022 - 2023</p>
 
 Master's studies at the Faculty of Mathematics and Computer Science, University of Adam Mickiewicz in Poznań, specialization Artificial Intelligence - AITech program.
 
-Through my participation in various conferences, such as the Data Science Summit and StatsBomb Conference in London, I had the opportunity to learn about the latest trends and developments in the field of research and artificial intelligence. Thesis - "Methods of data preprocessing in a project supporting the analysis of football transfers".
+Through my participation in various conferences both in Poland and internationally, such as the Data Science Summit in Warsaw, StatsBomb Conference in London and PPRAI in Łódź, I had the opportunity to learn about the latest trends and developments in the field of research and artificial intelligence. Thesis - "Methods of data preprocessing in a project supporting the analysis of football transfers".
 
-TODO more and about silicon valley
+One of the most memorable experiences during my studies was a visit to Silicon Valley, where, alongside my project partner Mikołaj Paterka, we presented our Master's project at Stanford University. This trip also included engagements with industry experts, visits to the University of California, Berkeley, and tours of various technology company headquarters, further enriching my understanding and perspective of the AI industry.
 
 ---
 
 <h2 style={{marginBottom: "5px"}}>Bachelor degree</h2>
-<p style={{color: "gray", margin: 0}}>Adam Mickiewicz University Poznań</p>
+<p style={{color: "gray", margin: 0}}>Adam Mickiewicz University Poznań, 2018 - 2022</p>
 
 Engineering studies at the Faculty of Mathematics and Computer Science, University of Adam Mickiewicz in Poznań, field of study - computer science. Thesis - "Building an application supporting athletes on the example of the Szewa application - automation and DevOps".
 
 ---
 
 <h2 style={{marginBottom: "5px"}}>Hobbies</h2>
-<p style={{color: "gray", margin: 0}}>Horse riding instructor</p>
+<p style={{color: "gray", margin: 0}}>Horse riding and running</p>
 
 Starting at the age of eight, I have had a deep passion for horse riding and have been consistently involved in the sport. In 2018, I obtained my certification as a coach from the Polish Equestrian Association, and for two years, I worked as an instructor in a horse riding school. This role provided me with valuable experience in working with people, including communicating with participants, tailoring lessons to their individual abilities, and providing feedback to help them improve their riding skills.
+
+My journey with running began in high school. In 2019, I completed my first half marathon. Regular running is more than just a physical activity for me; it's a source of motivation, a way to maintain good physical shape, and helps me focus.
