--- a/pages/education.mdx
+++ b/pages/education.mdx
@@ -4,6 +4,8 @@ title: education
 date: 2021-02-18
 ---
 
+import Image from "next/image";
+
 This page provides an insight into my educational background, highlighting my achievements and experiences that have shaped my academic and professional journey.
 
 ---
@@ -16,6 +18,26 @@ Master's studies at the Faculty of Mathematics and Computer Science, University 
 Through my participation in various conferences both in Poland and internationally, such as the Data Science Summit in Warsaw, StatsBomb Conference in London and PPRAI in Łódź, I had the opportunity to learn about the latest trends and developments in the field of research and artificial intelligence. Thesis - "Methods of data preprocessing in a project supporting the analysis of football transfers".
 
 One of the most memorable experiences during my studies was a visit to Silicon Valley, where, alongside my project partner Mikołaj Paterka, we presented our Master's project at Stanford University. This trip also included engagements with industry experts, visits to the University of California, Berkeley, and tours of various technology company headquarters, further enriching my understanding and perspective of the AI industry.
+
+<div className="image-container">
+    <div>
+        <Image
+            src="/images/pprai.jpg"
+            alt="pprai"
+            width={1745}
+            height={1829}
+            priority/>
+    </div>
+    <div className="image-spacer"/>
+    <div>
+        <Image
+            src="/images/stanford.jpg"
+            alt="Stanford"
+            width={1745}
+            height={1511}
+            priority/>
+    </div>
+</div>
 
 ---
 
