mobile styling fix

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -35,8 +35,10 @@ In my master's studies, I've dived into data preprocessing for my thesis, sparki
 
 Beyond technology, I am a certified horse riding coach. This role has allowed me to share my passion for equestrian sports. I also enjoy running, which I find to be a great way to clear my mind and stay fit.
 
-<LinkBadge link={"https://www.linkedin.com/in/jakub-adamski-07a6961b8/"} image={"/images/Linkedin.png"} width={821} height={214}/>
-<LinkBadge link={"https://github.com/adkuba"} image={"/images/GitHub_Logo.png"} width={884} height={214}/>
+<div className="badge-container">
+    <LinkBadge link={"https://www.linkedin.com/in/jakub-adamski-07a6961b8/"} image={"/images/Linkedin.png"} width={821} height={214}/>
+    <LinkBadge link={"https://github.com/adkuba"} image={"/images/GitHub_Logo.png"} width={884} height={214}/>
+</div>
 
 My freelancing experience spans diverse projects, from developing systems for publishing houses to creating management applications for horse riding schools. You can read more about it in my posts.
 
