--- a/pages/work.mdx
+++ b/pages/work.mdx
@@ -11,13 +11,13 @@ On this page, you'll find a glimpse into my work journey, showcasing the roles I
 <h2 style={{marginBottom: "5px"}}>MatchTrade Technologies</h2>
 <p style={{color: "gray", margin: 0}}>Java Developer, 2022</p>
 
-In my role at Match-Trade Technologies, I have been working both in the Bridge and QFX projects, focusing on developing and maintaining specialized software solutions that enable efficient and secure trading on financial markets through external exchanges. My responsibilities have spanned from enhancing the Bridge system — a platform facilitating real-time market access, order placement, and trade execution — to contributing to the QFX project, a central liquidity hub. This involvement has provided me with a deep understanding of the intricacies of market operations, trade execution, and liquidity management.
+In my role I’ve been working both in the Bridge and QFX projects, focusing on developing and maintaining specialized software solutions that enable efficient and secure trading on financial markets through external exchanges. My responsibilities have spanned from enhancing the Bridge system — a platform facilitating real-time market access, order placement, and trade execution — to contributing to the QFX project, a central liquidity hub. This involvement has provided me with a deep understanding of the intricacies of market operations, trade execution, and liquidity management.
 
 #### Integrations
-I was responsible for the development of connector applications for integrating other liquidity providers and connecting clients to our systems via the FIX protocol. Enabling our users to get quotes and execute trades from various markets. This line of work enabled me to get valuable insight into how markets operate and how trades are executed.
+I’ve been responsible for the development of connector applications for integrating other liquidity providers and connecting clients to our systems via the FIX protocol. Enabling our users to get quotes and execute trades from various markets. Through this experience, I’ve gained a significant understanding of market operations and trade execution processes.
 
 #### Bridge system microservices
-As a developer responsible for maintaining and improving the Bridge system I implemented two important services: the statistics microservice and the status service. The statistics microservice, provides crucial financial data like total commissions, volume, and trade trends by handling large data volumes, allowing our clients to make informed decisions. In addition, I centralized bridge status processing by refactoring existing code and developing a new status service, integral to our transition to a microservice architecture. I used RabbitMQ and Cassandra to manage extensive data from diverse sources.
+As a developer responsible for the Bridge system, I have contributed to several key components, including implementation of the statistics microservice and the status service. The statistics microservice provides crucial financial data, like total commissions and trade trends by handling large data volumes, allowing our clients to make informed decisions. In addition, I centralized bridge status processing by refactoring existing code and developing a new status service, integral to our transition to a microservice architecture.
 
 #### AI Research Team Involvement
 Additionally, my role expanded to include participation in the AI research team, where we periodically evaluated AI tools to advance our workforce's efficiency and innovation.
